change cart system: delete cookies requirement
